# switchboard-gui

./: package.json  pnpm-lock.yaml  shell.nix
.github/workflows/: main.yml
src/: app.less
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Amount.svelte  Board.svelte  Console.svelte  DepositsWithdrawals.svelte  ProgressBar.svelte  Receive.svelte  Transfer.svelte  ZcashDepositsWithdrawals.svelte  stores.js
src/routes/: +layout.svelte  +page.svelte
src/routes/ethereum/: +page.svelte
src/routes/main/: +page.svelte
src/routes/transfer/[sidechain]/: +page.js  +page.svelte
src/routes/zcash/: +page.svelte
